kube/service/wallet/route-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wallet-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: gate
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wallet
spec:
  hosts:
  - "example.com"
  gateways:
  - wallet-gateway
  http:
  - match:
    - uri:
        exact: /wallet
    - uri:
        prefix: /assets
    route:
    - destination:
        host: echo
        port:
          number: 1027
